removed the fixed width on the items per page to fix wrapping on mac firefox. fixes #809

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -964,7 +964,6 @@ p.items-per-page {
     float:right;
     margin: 1em 0;
     clear: both;
-    width: 181px;
 }
 
 select.items-per-page {
